# qtpyTerminal

./: LICENSE  README.md  example.py  pyproject.toml
src/qtpyTerminal/: __init__.py  qtpyTerminal.py
